Sculpt Mode: Face Sets not working with modifiers #115667

Closed
opened 2023-12-01 14:06:05 +01:00 by Julien Kaspar · 3 comments
Member

System Information
Operating system: Linux-6.6.2-gentoo-x86_64-AMD_Ryzen_Threadripper_1950X_16-Core_Processor-with-glibc2.37 64 Bits, X11 UI
Graphics card: AMD Radeon RX 7900 XT (radeonsi, navi31, LLVM 16.0.6, DRM 3.54, 6.6.2-gentoo) AMD 4.6 (Core Profile) Mesa 23.3.0

Blender Version
Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-12-01 09:14, hash: fb275bc040c1
Worked: (newest version of Blender that worked as expected)

Short description of error

Face Sets and masks should be propagated to the modifier visualization.
Since recently this is no longer working correctly. An example is the subdivision surface modifier.

image

Exact steps for others to reproduce the error

  • Add a few face sets in sculpt mode (Shift W or the Draw Face Set Brush)
  • Add a subdiv modifier
**System Information** Operating system: Linux-6.6.2-gentoo-x86_64-AMD_Ryzen_Threadripper_1950X_16-Core_Processor-with-glibc2.37 64 Bits, X11 UI Graphics card: AMD Radeon RX 7900 XT (radeonsi, navi31, LLVM 16.0.6, DRM 3.54, 6.6.2-gentoo) AMD 4.6 (Core Profile) Mesa 23.3.0 **Blender Version** Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-12-01 09:14, hash: `fb275bc040c1` Worked: (newest version of Blender that worked as expected) **Short description of error** Face Sets and masks should be propagated to the modifier visualization. Since recently this is no longer working correctly. An example is the subdivision surface modifier. ![image](/attachments/8adc92f3-d860-47a4-9f47-2b8b580b2190) **Exact steps for others to reproduce the error** - Add a few face sets in sculpt mode (Shift W or the Draw Face Set Brush) - Add a subdiv modifier
221 KiB
Julien Kaspar added the
Type
Report
Status
Needs Triage
Priority
Normal
labels 2023-12-01 14:06:06 +01:00

I can confirm the regression,.
I will attempt to identify where this issue was introduced.
This is the file used to test.

I can confirm the regression,. I will attempt to identify where this issue was introduced. This is the file used to test.
Caused by 301731692e @HooglyBoogly ^
Hans Goudey self-assigned this 2023-12-01 18:59:02 +01:00
Hans Goudey added
Type
Bug
and removed
Type
Report
labels 2023-12-01 18:59:07 +01:00
Member

Fix in !115744

Fix in !115744
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-12-04 14:43:46 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#115667
No description provided.