Fix #115667: Sculpt face sets draw wrong with subdivision modifier

Copy-paste mistake in 301731692e

Above commit was getting ".sculpt_mask" instead of ".sculpt_face_set"
attribute.

Pull Request: https://projects.blender.org/blender/blender/pulls/115744